# vv-banking-patron-losing

./: .gitignore  CLAUDE.md  README.md  generate_exploration_charts.py  main.ipynb  pyproject.toml  实验报告.docx  实验报告.md
src/bank_patron_losing/: __init__.py  analysis.py  preprocess.py  split.py  train.py
